--- a/management.html
+++ b/management.html
@@ -191,7 +191,7 @@
           <div class="manager" data-aos="zoom-in" data-aos-delay="60"
           data-name="Sunday Abe"
           data-title="Chief Financial Officer"
-          data-image="assets/img/sunday.jpeg"
+          data-image="assets/img/sunday.jpg"
           data-details="Sunday is a graduate of Accountancy from Federal Polytechnic Ado-Ekiti and MBA Finance from Ladoke Akintola University of Technology, Ogbomosho. His professional membership includes Associateship of the Institute of Chartered Accountants of Nigeria (ICAN) and the Chartered Institute of Taxation of Nigeria (CITN).
         
           He began his career in Finance Department of NFI Insurance Company PLC in 2005 and later moved to AlICO Insurance Pic after consolidation in 2007, as Executive Office and rose to the position of Senior Manager, Budget and Financial Reporting. As a management staff of AlICO Insurance PIc, he successfully led the implementation of an integrated financial software and transition of the company from Local GAP to International Financial Reporting Standard (IFRS). Sunday joined Old Mutual Nigeria Life Assurance Company Limited in April 2014 as Senior Finance Manager. Where he pioneered the retail and procurement arms of the business and led the team that set-up money-in process adjudged to be one of most efficient in the insurance industry today. 
