bugs: typographical errors

--- a/management.html
+++ b/management.html
@@ -190,7 +190,7 @@
 
           <div class="manager" data-aos="zoom-in" data-aos-delay="60"
           data-name="Sunday Abe"
-          data-title="Chief Financial Officer"
+          data-title="Chief Finance Officer"
           data-image="assets/img/sunday.jpg"
           data-details="Sunday is a graduate of Accountancy from Federal Polytechnic Ado-Ekiti and MBA Finance from Ladoke Akintola University of Technology, Ogbomosho. His professional membership includes Associateship of the Institute of Chartered Accountants of Nigeria (ICAN) and the Chartered Institute of Taxation of Nigeria (CITN).
         
@@ -212,7 +212,7 @@
           <div class="manager" data-aos="zoom-in" data-aos-delay="60"
           data-image="assets/img/ADENIYI ODEYALE 1.jpg"
           data-name="Adeniyi Odeyale"
-          data-title="Chief Credit Office"
+          data-title="Chief Credit Officer"
           data-details="Adeniyi holds a degree in Economics from Ambrose Alli University and master’s in finance from Obafemi Awolowo University, Ile Ife. He is also an associate member of the Institute of Chartered Accountants of Nigeria. Adeniyi has attended various professional and leadership training program over the years. 
 
           Adeniyi Odeyale is a consummate banker with key expertise in Banking Operations. Customer Service Management, Treasury Operations/Funds Management, Credit Administration and Quality Control. He presently heads the Transaction Services Group. Prior to joining GTHomes Limited in 2009, he was with Skye Bank Plc. where he pioneered the operations at the Ajose Adeogun Branch, Victoria Island, Lagos. Adeniyi started his banking career with Afibank PlC. in 1999 before moving to Guaranty Trust Bank Plc. in 2000
