--- a/management.html
+++ b/management.html
@@ -205,7 +205,7 @@
               <div >
      
                   <h4 >Sunday Abe</h4>
-                  <p >Chief Financial Officer</p>
+                  <p >Chief Finance Officer</p>
             </div>
           </div>
 
@@ -271,7 +271,8 @@
                   <p>Group Head, Systems Control</p>
             </div>
           </div>
-
+          </div>
+          <div class="row">
 
           <div class="manager" data-aos="zoom-in" data-aos-delay="60"
           data-name="Joseph Nwaghodoh"
