fix: qualty of slide pictures further reduction

--- a/directors.html
+++ b/directors.html
@@ -152,9 +152,9 @@
         </div>
       
         <div class="slides ">
-          <img src="assets/img/STAFF PICTURE 1.png" alt="Slide 1" class="active">
-          <img src="assets/img/STAFF PICTURE 2.png" alt="Slide 2">
-          <img src="assets/img/STAFF PICTURE 3.png" alt="Slide 3">
+          <img src="assets/img/STAFF PICTURE 1_new.jpg" alt="Slide 1" class="active">
+          <img src="assets/img/STAFF PICTURE 2_new.jpg" alt="Slide 2">
+          <img src="assets/img/STAFF PICTURE 3_new.jpg" alt="Slide 3">
         </div>
       
         <!-- <div class="slides fade">
