fix:picture quality

--- a/management.html
+++ b/management.html
@@ -150,9 +150,9 @@
         </div>
       
         <div class="slides ">
-          <img src="assets/img/STAFF PICTURE 1_new.jpg" alt="Slide 1" class="active">
-          <img src="assets/img/STAFF PICTURE 2_new.jpg" alt="Slide 2">
-          <img src="assets/img/STAFF PICTURE 3_new.jpg" alt="Slide 3">
+          <img src="assets/img/13d577.jpg" alt="Slide 1" class="active">
+          <img src="assets/img/afc219.jpg" alt="Slide 2">
+          <img src="assets/img/1bb09d.jpg" alt="Slide 3">
         </div>
       
         <!-- <div class="slides fade">
