update: try to make slide load faster

--- a/directors.html
+++ b/directors.html
@@ -151,10 +151,10 @@
           </div>
         </div>
       
-        <div class="slides ">
-          <img src="assets/img/13d577.jpg" alt="Slide 1" class="active">
-          <img src="assets/img/afc219.jpg" alt="Slide 2">
-          <img src="assets/img/1bb09d.jpg" alt="Slide 3">
+        <div class="slides" loading = "lazy">
+          <img src="assets/img/13d577.jpg" alt="Slide 1" class="active" loading = "lazy">
+          <img src="assets/img/afc219.jpg" alt="Slide 2" loading = "lazy">
+          <img src="assets/img/1bb09d.jpg" alt="Slide 3" loading = "lazy">
         </div>
         <!-- <div class="slides fade">
           <img src="assets/img/STAFF PICTURE 2.jpg" alt="Slide 2">
