fix: accountopening form not opening

--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
             <ul>
               <li><a href="https://withdrawalrequest.imperialmortgagebank.com/">Withdrawal Request</a></li>
               <li><a href="https://mortgagerequest.imperialmortgagebank.com/">Mortgage Application</a></li>
-              <li class="dropdown"><a href="https://www.accountopening.imperialmortgagebank.com/"><span>Account Opening</span></a>
-               
-              </li>
+              <li><a href="https://www.accountopening.imperialmortgagebank.com/">Account Opening</a></li>
               <li><a href="loaneligibility.html">Loan Eligibility Calculator</a></li>
               <li><a href="http://rsa.imperialmortgagebank.com/">RSA Form</a></li>
               <li><a href="ninvalidation.html">BVN & NIN Collection</a></li>
