update: phone number and email address

--- a/landing/index.html
+++ b/landing/index.html
@@ -316,8 +316,8 @@
               off Awolowo Road,
               Ikoyi, Lagos <br>
               Abuja Office: Plot 266, FMBN Building, By Ceddi Plaza, Central Business District, Abuja. <br>
-              <strong>Phone:</strong> (+234) 01-2716123, (+234) 01-2716125 <br>
-              <strong>Email:</strong> info@imperialmortgagebank.com<br>
+              <strong>Phone:</strong> (+234) 702 5126 457 <br>
+              <strong>Email:</strong> info@imperialmortgagebank.com, customercare@imperialmortgagebank.com<br>
             </p>
           </div>
 
