--- a/privacy.html
+++ b/privacy.html
@@ -203,7 +203,7 @@ p {
                 <p style="text-transform: uppercase;"><strong>Introduction</strong></p>
                 <p>
                     This Privacy Policy (“Policy”) and any other document referred to in this Policy sets out the basis on which any Personal Data that Imperial Homes Mortgage Bank Limited (“IHMB “we” or “us”) collects from you, or that you provide to us, will be processed by us. Please read the following carefully to understand our views and practices regarding your Personal Data and how we will treat it. If you have any comments on this Policy, please email them to 
-                    <a href="mailto:info@imperialmortgagebank.com.">info@imperialmortgagebank.com.</a>   
+                    <a href="mailto:info@imperialmortgagebank.com, customercare@imperialmortgagebank.com.">info@imperialmortgagebank.com, customercare@imperialmortgagebank.com.</a>   
                 </p>
                 <p style="text-transform: uppercase;"><strong>Consent</strong></p>
                 <p>
@@ -428,8 +428,8 @@ p {
               off Awolowo Road,
               Ikoyi, Lagos <br>
               Abuja Office: Plot 266, FMBN Building, By Ceddi Plaza, Central Business District, Abuja. <br>
-              <strong>Phone:</strong> (+234) 01-2716122, (+234) 01-2716122 <br>
-              <strong>Email:</strong> info@imperialmortgagebank.com<br>
+              <strong>Phone:</strong> (+234) 702 5126 457 <br>
+              <strong>Email:</strong> info@imperialmortgagebank.com, customercare@imperialmortgagebank.com<br>
             </p>
           </div>
 
