--- a/propertyInterest.html
+++ b/propertyInterest.html
@@ -330,8 +330,8 @@
               off Awolowo Road,
               Ikoyi, Lagos <br>
               Abuja Office: Plot 266, FMBN Building, By Ceddi Plaza, Central Business District, Abuja. <br>
-              <strong>Phone:</strong> (+234) 01-271612, (+234) 01-271613 <br>
-              <strong>Email:</strong> info@imperialmortgagebank.com<br>
+              <strong>Phone:</strong> (+234) 702 5126 457 <br>
+              <strong>Email:</strong> info@imperialmortgagebank.com, customercare@imperialmortgagebank.com<br>
             </p>
           </div>
 
@@ -367,7 +367,7 @@
       <div class="copyright">
         &copy; Copyright <strong><span>Imperial Homes Mortgage Bank</span></strong>. All Rights Reserved
       </div>
-      <strong>Phone:</strong> (+234) 01-271612, (+234) 01-271613 <br>
+      <strong>Phone:</strong> (+234) 702 5126 457 <br>
     
     </div>
   </footer><!-- End Footer -->
