--- a/about.html
+++ b/about.html
@@ -338,9 +338,9 @@
                 <br />
                 Abuja Office: Plot 266, FMBN Building, By Ceddi Plaza, Central
                 Business District, Abuja. <br />
-                <strong>Phone:</strong> (+234) 01-271612, (+234) 01-271613
+                <strong>Phone:</strong> (+234) 702 5126 457
                 <br />
-                <strong>Email:</strong> info@imperialmortgagebank.com<br />
+                <strong>Email:</strong> info@imperialmortgagebank.com, customercare@imperialmortgagebank.com<br />
               </p>
             </div>
 
