--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
             <div class="email">
               <i class="bi bi-envelope"></i>
               <h4>Email:</h4>
-              <p>info@imperialmortgagebank.com</p>
+              <p>info@imperialmortgagebank.com, customercare@imperialmortgagebank.com</p>
             </div>
 
             <div class="phone">
@@ -647,8 +647,8 @@
               off Awolowo Road,
               Ikoyi, Lagos <br>
               Abuja Office: Plot 266, FMBN Building, By Ceddi Plaza, Central Business District, Abuja. <br>
-              <strong>Phone:</strong> (+234) 01-2716123, (+234) 01-2716125 <br>
-              <strong>Email:</strong> info@imperialmortgagebank.com<br>
+              <strong>Phone:</strong> (+234) 702 5126 457 <br>
+              <strong>Email:</strong> info@imperialmortgagebank.com, customercare@imperialmortgagebank.com<br>
             </p>
           </div>
 
