--- a/qr.html
+++ b/qr.html
@@ -202,8 +202,8 @@
               off Awolowo Road,
               Ikoyi, Lagos <br>
               Abuja Office: Plot 266, FMBN Building, By Ceddi Plaza, Central Business District, Abuja. <br>
-              <strong>Phone:</strong> (+234) 01-2716122, (+234) 01-2716122 <br>
-              <strong>Email:</strong> info@imperialmortgagebank.com<br>
+              <strong>Phone:</strong> (+234) 702 5126 457 <br>
+              <strong>Email:</strong> info@imperialmortgagebank.com, customercare@imperialmortgagebank.com<br>
             </p>
           </div>
 
