changes 22nd Aug

--- a/management.html
+++ b/management.html
@@ -507,7 +507,7 @@
               <p>Group Head, Private and Institutional Banking</p>
             </div>
           </div>
-
+<!-- 
           <div
             class="manager"
             data-aos="zoom-in"
@@ -538,7 +538,7 @@
               <h4>Omolola Ogunmoroti</h4>
               <p>Head, Legal</p>
             </div>
-          </div>
+          </div> -->
 
           <div
             class="manager"
