fix: effected in management

--- a/directors.html
+++ b/directors.html
@@ -334,7 +334,7 @@
           
           He is happily married with children.">
           <div class="image-container">
-            <img src="assets/img/AYODELE OLOWOOKERE THUMB.JPG" alt="" class="manager-image" />
+            <img src="assets/img/AYODELE OLOWOOKERE THUMB.jpg" alt="" class="manager-image" />
           </div>
           <div>
             <h4>Mr. Ayodele Olowookere</h4>
