--- a/management.html
+++ b/management.html
@@ -305,7 +305,7 @@
           
           He is happily married with children.">
           <div class="image-container">
-            <img src="assets/img/AYODELE OLOWOOKERE THUMB.jpg" alt="" class="manager-image" />
+            <img src="assets/img/AYODELE OLOWOOKERE THUMB2.jpg" alt="" class="manager-image" />
           </div>
           <div>
             <h4>Mr. Ayodele Olowookere</h4>
