fix: naming captalization

--- a/directors.html
+++ b/directors.html
@@ -292,7 +292,7 @@
             data-aos="zoom-in"
             data-aos-delay="60"
             data-name="MR. MUTIU SUNMONU, CON"
-            data-title="Non Executive Director/Chairman"
+            data-title="Non-Executive Director/Chairman"
             data-details="Mr Mutiu Sunmonu, the current Chancellor of McPherson University, graduated from the University of Lagos with a first-class degree in Mathematics and Computer Science. He started his career in Shell Petroleum Development Company of Nigeria (SPDC) in 1978 as a Computer Programmer/Business Analyst. He served in various capacities in Shell, both in Nigeria and abroad. 
   
             On January 1 2008, he was appointed the Managing Director of SPDC and Regional Vice President, Production, and two years later, he became the Country Chair, Shell Companies in Nigeria. He combined this portfolio with his role as Managing Director of the SPDC and the Vice President, Production of Sub-Saharan Africa. He retired from SPDC after 36 years of service.
@@ -312,7 +312,7 @@
             </div>
             <div>
               <h4>Mr. Mutiu Sunmonu, CON</h4>
-              <p>Non Executive Director/Chairman</p>
+              <p>Non-Executive Director/Chairman</p>
             </div>
           </div>
 
@@ -371,8 +371,8 @@
             </div>
   
             <div>
-              <h4>MR. Austin Onono</h4>
-              <p>Non Executive Director</p>
+              <h4>Mr. Austin Onono</h4>
+              <p>Non-Executive Director</p>
             </div>
           </div>
         <div
@@ -396,7 +396,7 @@
         </div>
         <div>
           <h4>Mr. Emeka Ndu</h4>
-          <p>Non Executive Director</p>
+          <p>Non-Executive Director</p>
         </div>
       </div>
       <div
@@ -407,7 +407,7 @@
   
   He is currently the Managing Director of CET Energy Group, an indigenous Oil and Gas Company borne out of the diversification exercise of CET Powers, a company which specialises in power rental for hotels, factories, breweries, secure sites, with complete EPP and IPP solutions, and is the largest independent fleet of rental units in Sub-Saharan Africa.
   "
-      data-title="Non Executive Director"
+      data-title="Non-Executive Director"
       data-name="MR. IKENNA NWIZU"
       data-image="assets/img/IKENNA NWIZU.jpg"
     >
@@ -415,8 +415,8 @@
         <img src="assets/img/IKENNA NWIZU THUMB.jpg" class="manager-image" alt="" />
       </div>
       <div class="member-info-content">
-        <h4>MR. Ikenna Nwizu</h4>
-        <p>Non Executive Director</p>
+        <h4>Mr. Ikenna Nwizu</h4>
+        <p>Non-Executive Director</p>
       </div>
     </div>
             <div
@@ -443,7 +443,7 @@
                 <img src="assets/img/OLALEKAN AJISAFE THUMB.jpg" alt="" class="manager-image" />
               </div>
               <div>
-                <h4>DR. Olalekan Ajisafe</h4>
+                <h4>Dr. Olalekan Ajisafe</h4>
                 <p>Non-Executive Director</p>
               </div>
             </div>
@@ -452,7 +452,7 @@
             data-aos="zoom-in"
             data-aos-delay="60"
             data-name="MR. OLUDOLAPO AJAYI"
-            data-title="Non Executive Director"
+            data-title="Non-Executive Director"
             data-details="Mr. Oludolapo Ajayi is a practising lawyer and real estate specialist. He attended St. Gregory’s College, Obalende Lagos, Edward Greene’s Tutorial College, Oxford England and studied Law at the renowned University of Ife, Nigeria with honours. He was called to the Nigerian Bar in 1984.
   
             Mr. Ajayi began his legal career at the Edo State Ministry of Justice, Benin and proceeded to practise at Adeyiga O. Ajayi & Co. for many years. He began his own practice, Brunel Partnership, a multi-disciplinary Real Estate Advisory and Legal Services firm in 2004.
@@ -466,7 +466,7 @@
             </div>
             <div>
               <h4>Mr. Oludolapo Ajayi</h4>
-              <p>Non Executive Director</p>
+              <p>Non-Executive Director</p>
             </div>
           </div>
             <div
@@ -474,7 +474,7 @@
               data-aos="zoom-in"
               data-aos-delay="60"
               data-name="DR. FEMI SUNMONU"
-              data-title="Non Executive Director"
+              data-title="Non-Executive Director"
               data-details="Dr Femi Sunmonu is a Medical Doctor by profession. He is a Healthcare Executive with extensive expertise in leading digital transformation in healthcare, and responsibility for senior stakeholder management across public and private sectors. He graduated from the University of Medicine and Dentistry of New Jersey, USA. He holds an MBA from Regents University, UK and is also an alumnus of Rutgers University, New Jersey and Stanford Graduate School of Business, both in the USA. 
   
               Dr Sunmonu is responsible for implementation and stewardship of corporate strategy, ensuring robust governance and facilitating value creation. He is skilled in forging strategic alliances and advancing digital health solutions and has effectively integrated technology in the UK’s NHS and expanded digital medical services in emerging markets. 
@@ -491,8 +491,8 @@
                 <img src="assets/img/OLUFEMI SUNMONU THUMB.jpg" class="manager-image" alt="" />
               </div>
               <div>
-                <h4>DR. Femi Sunmonu</h4>
-                <p>Non Executive Director</p>
+                <h4>Dr. Femi Sunmonu</h4>
+                <p>Non-Executive Director</p>
               </div>
             </div>
             <div
@@ -500,7 +500,7 @@
               data-aos="zoom-in"
               data-aos-delay="60"
               data-name="OTUNBA OLUMIDE OSUNSINA"
-              data-title="Non Executive Director"
+              data-title="Non-Executive Director"
               data-details="Otunba Olumide Osunsina is an innovative Real Estate Executive with over 35 years of experience in Property Development and Management. He holds a BSc in Building Technology from Ahmadu Bello University, Zaria, as well as the University of Bedfordshire, UK. He then went on to bag an MBA from Abubakar Tafawa Balewa University, Zaria. He is also an alumnus of the University of Lagos.
   
               Olumide Osunsina’s extensive expertise has made him successful in planning and managing Real Estate, and his exceptional knowledge of property development has earned him the superior ability to maintain complex and diverse Residential Real Estate portfolios, powered by his high negotiating collaboration and communication skills.
@@ -518,7 +518,7 @@
               </div>
               <div>
                 <h4>Otunba Olumide Osunsina</h4>
-                <p>Non Executive Director</p>
+                <p>Non-Executive Director</p>
               </div>
             </div>
             <div
@@ -526,7 +526,7 @@
               data-aos="zoom-in"
               data-aos-delay="60"
               data-name="MR. TINEYI KUIPA"
-              data-title="Non Executive Director"
+              data-title="Non-Executive Director"
               data-details="Mr. Tineyi Kuipa is a Chartered Accountant and Private Equity Professional with over 17 years of international experience.
   
               He started his career as an Associate with Deloitte LLP in London where he trained and qualified as a CA working in the Real Estate sector before joining KPMG LLP’s London-based Private Equity Practice as a Manager where he worked on mid-market, pan-European transactions across various industries and sectors.
@@ -544,7 +544,7 @@
               </div>
               <div>
                 <h4>Mr. Tineyi Kuipa</h4>
-                <p>Non Executive Director</p>
+                <p>Non-Executive Director</p>
               </div>
             </div>
   
