--- a/qr.html
+++ b/qr.html
@@ -91,6 +91,7 @@
 
                   <li><a href="propertyInterest.html">Property Interest Questionaire Form</a></li>
                   <li><a href="nhfform.html">NHF Application Form</a></li>
+                  <li><a href="https://www.mortgagebroker.imperialmortgagebank.com/">Realtor</a></li>
                   
             </ul>
           </li>
