fix: primary color set to logo color

--- a/landing/index.html
+++ b/landing/index.html
@@ -62,7 +62,7 @@
               <div>
               <img src="./assets/img/imperial_logo.png"  align="left" style="height: 80px; width: 80px; margin-top: -20px;"></div>
               <div class="col-lg-5  d-flex flex-column justify-content-center">
-                <h1 style="font-size: 40px; font-weight:600; color: #fff;">Thank you for showing interest in our  <font style="color: #eb5d1e; font-size: 50px;">Products</font> </h1>
+                <h1 style="font-size: 40px; font-weight:600; color: #fff;">Thank you for showing interest in our  <font style="color: #e52f00; font-size: 50px;">Products</font> </h1>
                 
                 <h4 style="color:#fff;">Move over to the soft life with us.</h4>
               <div id="download" class="row pt-4">
@@ -97,7 +97,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-       <p style="background-color: #eb5d1e; font-weight: ; color: #f5f5f5; border-radius: 10px; padding: 10px 0px; width: 100%; height: 21vh;"><span><i class="fa fa-calendar" aria-hidden="true"></i></span><br>
+       <p style="background-color: #e52f00; font-weight: ; color: #f5f5f5; border-radius: 10px; padding: 10px 0px; width: 100%; height: 21vh;"><span><i class="fa fa-calendar" aria-hidden="true"></i></span><br>
           Duration<br>
           1 - 9<br>
           Months</p>
@@ -183,7 +183,7 @@
         <div class="container">
   <div class="row">
     <div class="col-sm-4">
-       <p style="background-color: #eb5d1e; font-size:13px; color: #f5f5f5; border-radius: 10px; padding: 10px 0px; "><span><i class="fa fa-calendar" aria-hidden="true"></i></span><br>
+       <p style="background-color: #e52f00; font-size:13px; color: #f5f5f5; border-radius: 10px; padding: 10px 0px; "><span><i class="fa fa-calendar" aria-hidden="true"></i></span><br>
           90 Days<br>
           Minimum<br>
           Tenor</p>
@@ -197,7 +197,7 @@
           Amount</p>
       </div>
        <div class="col-sm-4" style="border-radius: 2px;">
-         <p style="background-color: #eb5d1e; font-size:13px ; color: #f5f5f5; border-radius: 10px; padding: 10px 5px 10px 2px"><span><i class="fa fa-star-o" aria-hidden="true"></i>
+         <p style="background-color: #e52f00; font-size:13px ; color: #f5f5f5; border-radius: 10px; padding: 10px 5px 10px 2px"><span><i class="fa fa-star-o" aria-hidden="true"></i>
 </span><br>
           Competitive<br>
           Interest<br>
@@ -228,7 +228,7 @@
           Tenor</p>
       </div><!-- /.card -->
    <div class="col-sm-4" style="border-radius: 2px;">
-         <p style="background-color: #eb5d1e; font-size:13px; color: #f5f5f5; border-radius: 10px; padding: 10px 0px; height: 25vh;">
+         <p style="background-color: #e52f00; font-size:13px; color: #f5f5f5; border-radius: 10px; padding: 10px 0px; height: 25vh;">
           <span><i class="fa fa-money" aria-hidden="true"></i>
 
 </span><br>
@@ -262,7 +262,7 @@
         <div class="container">
   <div class="row">
     <div class="col-sm-4">
-       <p style="background-color: #eb5d1e; font-size: 13px ; color: #f5f5f5; border-radius: 10px; padding: 10px 0px"><span><i class="fa fa-calendar" aria-hidden="true"></i></span><br>
+       <p style="background-color: #e52f00; font-size: 13px ; color: #f5f5f5; border-radius: 10px; padding: 10px 0px"><span><i class="fa fa-calendar" aria-hidden="true"></i></span><br>
           Starting from<br>
           12%<br>
           per annum</p>
