--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
             <div class="row">
               <div class="col-lg-5  d-flex flex-column justify-content-center">
-                <h1 style="font-size: 40px; font-weight:600;">Unlock New Possibilities With  <font style="color: #eb5d1e; font-size: 50px;">Imperial+</font> </h1>
+                <h1 style="font-size: 40px; font-weight:600;">Unlock New Possibilities With  <font style="color: #e52f00; font-size: 50px;">Imperial+</font> </h1>
                 
                 <h4> Gain access to Banking, Investment, Mortgage and Property services on our mobile app.</h4>
                 <div id="download" class="row pt-4">
