--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <li class="dropdown"><a href="#"><span>Forms</span> <i class="fa-sharp fa-solid fa-caret-down"></i> </a>
             <ul>
               <li><a href="https://withdrawalrequest.imperialmortgagebank.com/">Withdrawal Request</a></li>
-              <li><a href="https://lms.imperialmortgagebank.com/">Loan Management System</a></li>
+              <li><a href="https://lms.imperialmortgagebank.com/">Mortgage Request</a></li>
               <li><a href="https://www.accountopening.imperialmortgagebank.com/">Account Opening</a></li>
               <li><a href="loaneligibility.html">Loan Eligibility Calculator</a></li>
               <li><a href="http://rsa.imperialmortgagebank.com/">RSA Form</a></li>
@@ -327,7 +327,7 @@
               <div class="row">
                 <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
                   <i class="fa-duotone fa-3"></i>
-                  <h4>Loan Management System</h4>
+                  <h4>Mortgage Request</h4>
                   <p>Complete our mortgage form and submit required documentation for evaluation.</p>
                 </div>
                 <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
@@ -484,7 +484,7 @@
         <h2 style="color: #fff">Purchase, Construction and Refinancing Mortgages</h2>
         <div class="row pt-4">
           <div class="col-lg-5">
-            <a href="https://lms.imperialmortgagebank.com/"> <button class="btn btn-success" style="font-size: 15px;"> Loan Management System Form &nbsp &nbsp <i class="fa-solid fa-arrow-right"></i> </button>  </a>
+            <a href="https://lms.imperialmortgagebank.com/"> <button class="btn btn-success" style="font-size: 15px;"> Mortgage Request Form &nbsp &nbsp <i class="fa-solid fa-arrow-right"></i> </button>  </a>
           </div>
          
             </div>
