--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -85,7 +85,7 @@
           <li class="dropdown"><a href="#"><span>Forms</span> <i class="fa-sharp fa-solid fa-caret-down"></i> </a>
             <ul>
               <li><a href="https://withdrawalrequest.imperialmortgagebank.com/">Withdrawal Request</a></li>
-              <li><a href="https://lms.imperialmortgagebank.com/">Loan Management System</a></li>
+              <li><a href="https://lms.imperialmortgagebank.com/">Mortgage Request</a></li>
               <li class="dropdown"><a href="https://www.accountopening.imperialmortgagebank.com/"><span>Account Opening</span></a>
                
               </li>
