fix: MrNiyi profile

--- a/management.html
+++ b/management.html
@@ -357,12 +357,12 @@
             data-image="assets/img/ADENIYI ODEYALE 1.jpg"
             data-name="Adeniyi Odeyale"
             data-title="Chief Credit Officer"
-            data-details="Adeniyi holds a degree in Economics from Ambrose Alli University and master’s in finance from Obafemi Awolowo University, Ile Ife. He is also an associate member of the Institute of Chartered Accountants of Nigeria. Adeniyi has attended various professional and leadership training program over the years. 
+            data-details="Adeniyi is a Chartered Accountant, with a master’s degree in finance from Obafemi Awolowo University, bachelor’s degree in economics and an executive leadership program from the Lagos Business School. He is also a member of the Chartered Institute of Taxation of Nigeria. Adeniyi has attended various professional and leadership training programs over the years. Adeniyi Odeyale is a consummate banker with key expertise in Credit, Risk & Portfolio Management, Treasury/Funds Management, Business/Products Development, Loan Recovery, Banking Operations, Customer Experience Management, Property Development, Finance, Mortgages and Quality Control. He currently heads the Credit & Portfolio Management Group of the Bank.
 
-          Adeniyi Odeyale is a consummate banker with key expertise in Banking Operations. Customer Service Management, Treasury Operations/Funds Management, Credit Administration and Quality Control. He presently heads the Transaction Services Group. Prior to joining GTHomes Limited in 2009, he was with Skye Bank Plc. where he pioneered the operations at the Ajose Adeogun Branch, Victoria Island, Lagos. Adeniyi started his banking career with Afibank PlC. in 1999 before moving to Guaranty Trust Bank Plc. in 2000
+            Prior to joining GTHomes Limited (Imperial Homes Mortgage Bank Limited) in 2009, he was with Skye Bank Plc. where he pioneered the banking operations at the Ajose Adeogun Branch, Victoria Island, Lagos. Adeniyi started his banking career with Afribank Plc. in 1999 before moving to Guaranty Trust Bank Plc in 2000. During his stint with GTBank he was at different times in Settlement Group and Transaction Services Group. Adeniyi has a strong interest in the delivery of quality service to customers and was at various times part of strategic committees set up to drive quality assurance, new products and process improvement initiatives. He has won many awards because of his zeal for excellence and customers delight. 
 
-          During his stint with GTBank he was at different times in Settlement Group and Transaction Services Group. Adeniyi has a strong interest in the delivery of quality service to customers and was at various times part of committees set up to drive quality and process improvement initiatives. He has won many awards as a result of his zeal for customers delight.
-          "
+            He loves art, community service, stakeholders’ management and mentoring. He sits on the Board of EAF Foundation and a Special Marshall of the Federal Road Safety Corp. 
+"
           >
             <div class="image-container">
               <img
