--- a/management.html
+++ b/management.html
@@ -40,6 +40,7 @@
       src="https://kit.fontawesome.com/4635ab7630.js"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode:"siqf6cf0320e38cb576198589a705feabdc53415c34995a31cb0dd7fdf085dad9e7cc8f1ce1ff3c645aa98690130f0eeefc", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);d.write("<div id='zsiqwidget'></div>");</script>
     <!-- <style>
       /* Hide slides initially */
       .slides {
@@ -586,6 +587,7 @@
                 <strong>Email:</strong> info@imperialmortgagebank.com,
                 customercare@imperialmortgagebank.com<br />
               </p>
+              
             </div>
 
             <div class="col-lg-3 col-md-6 footer-links">
@@ -642,7 +644,8 @@
           </div>
         </div>
       </div>
-
+      <br/>
+      <center><strong><span>Imperial Homes Mortgage Bank is licensed by the CBN. All deposits are insured by NDIC</span></strong></center>
       <div class="container py-4">
         <div class="copyright">
           &copy; Copyright
@@ -650,6 +653,7 @@
           >. All Rights Reserved
         </div>
       </div>
+      
     </footer>
     <!-- End Footer -->
 
