--- a/directors.html
+++ b/directors.html
@@ -688,7 +688,7 @@
         </div>
       </div>
       <br/>
-      <center><strong><span>Imperial Homes Mortgage Bank is licensed by the CBN. All deposits are insured by NDIC</span></strong></center>
+      <center><strong><span>Imperial Homes Mortgage Bank is licensed by the Central Bank of Nigeria. All deposits are insured by Nigeria Deposit Insurance Corporation</span></strong></center>
       <div class="container py-4">
         <div class="copyright">
           &copy; Copyright
