Re: Added cbn licensed to all pages

--- a/copy.html
+++ b/copy.html
@@ -684,7 +684,9 @@
       </div>
     </div>
 
-    <div class="container py-4">
+  <br/>
+      <center><strong><span>Imperial Homes Mortgage Bank is licensed by the Central Bank of Nigeria. All deposits are insured by Nigeria Deposit Insurance Corporation</span></strong></center>
+      <div class="container py-4">
       <div class="copyright">
         &copy; Copyright <strong><span>Imperial Homes Mortgage Bank</span></strong>. All Rights Reserved
       </div>
