--- a/about.html
+++ b/about.html
@@ -405,6 +405,8 @@
         </div>
       </div>
 
+    <br/>
+      <center><strong><span>Imperial Homes Mortgage Bank is licensed by the Central Bank of Nigeria. All deposits are insured by Nigeria Deposit Insurance Corporation</span></strong></center>
       <div class="container py-4">
         <div class="copyright">
           &copy; Copyright
