--- a/carers.html
+++ b/carers.html
@@ -312,7 +312,9 @@ careers@imperialmortgagebank.com
       </div>
     </div>
 
-    <div class="container py-4">
+  <br/>
+      <center><strong><span>Imperial Homes Mortgage Bank is licensed by the Central Bank of Nigeria. All deposits are insured by Nigeria Deposit Insurance Corporation</span></strong></center>
+      <div class="container py-4">
       <div class="copyright">
         &copy; Copyright <strong><span>Imperial Homes Mortgage Bank</span></strong>. All Rights Reserved
       </div>
