--- a/directorsx.html
+++ b/directorsx.html
@@ -626,6 +626,8 @@ He is currently the Managing Director of CET Energy Group, an indigenous Oil and
         </div>
       </div>
 
+    <br/>
+      <center><strong><span>Imperial Homes Mortgage Bank is licensed by the Central Bank of Nigeria. All deposits are insured by Nigeria Deposit Insurance Corporation</span></strong></center>
       <div class="container py-4">
         <div class="copyright">
           &copy; Copyright
