--- a/about.html
+++ b/about.html
@@ -179,9 +179,13 @@
             </li>
             <li><a class="nav-link scrollto" href="carers.html">Careers</a></li>
 
-            <li>
+               <li>
               <a class="nav-link scrollto" href="property.html">Properties</a>
             </li>
+            <li>
+              <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blogs</a>
+            </li>
+          
             <li>
               <a
                 id="remv"
