--- a/contact.html
+++ b/contact.html
@@ -124,6 +124,9 @@
 
         
           <li><a class="nav-link scrollto" href="property.html">Properties</a></li>
+          <li>
+            <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blogs</a>
+          </li>
           <li><a id="remv" class="nav-link scrollto" href="https://ibs.imperialmortgagebank.com">Internet Banking</a></li>
         
           <li><a id="remv" class="nav-link scrollto" href="https://www.accountopening.imperialmortgagebank.com/">Open Account</a></li>
