--- a/directors.html
+++ b/directors.html
@@ -205,6 +205,9 @@
               <a class="nav-link scrollto" href="property.html">Properties</a>
             </li>
             <li>
+              <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blogs</a>
+            </li>
+            <li>
               <a
                 id="remv"
                 class="nav-link scrollto"
