--- a/privacy.html
+++ b/privacy.html
@@ -158,6 +158,9 @@ p {
           <li><a class="nav-link scrollto" href="contact.html">Support</a></li>
         
           <li><a class="nav-link scrollto" href="property.html">Properties</a></li>
+          <li>
+            <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blogs</a>
+          </li>
           <li><a id="remv" class="nav-link scrollto" href="https://ibank.imperialmortgagebank.com/bankonline/">Internet Banking</a></li>
         
           <li><a id="remv" class="nav-link scrollto" href="https://www.accountopening.imperialmortgagebank.com/">Open Account</a></li>
