blogs->Blog posts

--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@
               <a class="nav-link scrollto" href="property.html">Properties</a>
             </li>
             <li>
-              <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blogs</a>
+              <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blog Posts</a>
             </li>
           
             <li>
