--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
         
           <li><a class="nav-link scrollto" href="property.html">Properties</a></li>
           <li>
-            <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blogs</a>
+            <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blog Posts</a>
           </li>
           <li><a id="remv" class="nav-link scrollto" href="https://ibs.imperialmortgagebank.com">Internet Banking</a></li>
         
