--- a/privacy.html
+++ b/privacy.html
@@ -159,7 +159,7 @@ p {
         
           <li><a class="nav-link scrollto" href="property.html">Properties</a></li>
           <li>
-            <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blogs</a>
+            <a class="nav-link scrollto" href="https://blogs.imperialmortgagebank.com">Blog Posts</a>
           </li>
           <li><a id="remv" class="nav-link scrollto" href="https://ibank.imperialmortgagebank.com/bankonline/">Internet Banking</a></li>
         
