--- a/loaneligibility.html
+++ b/loaneligibility.html
@@ -285,7 +285,7 @@
               <div class="form-group col-md-12 mt-3 mt-md-0">
             <label class="label" for="funding">Mortgage Funding Options</label>
 
-<select class="form-control" name="funding" id="funding">
+<select class="form-control" name="funding" id="funding" style="appearance: auto;">
   <option class="form-control" value="commercial">Commercial Mortage 28% (Max 15 Years)</option>
   <option class="form-control" value="mofi">MOFI (Ministry of Finance Incorporate) Mortage 12% (Max 10 Years)</option>
   <option class="form-control" value="fhf">FHF (Family Homes Fund) Mortage 17% (Max 20 Years)</option>
