admin login link

--- a/loaneligibility.html
+++ b/loaneligibility.html
@@ -158,6 +158,7 @@
         <div class="col-lg-3"></div>
         <div class="col-lg-6 mt-5 mt-lg-0 d-flex " data-aos="fade-up" data-aos-delay="200">
           <form role="form" class="php" onsubmit="calculate(); return false">
+            <div class="d-flex justify-content-end"><a href="loanadmin.html">Admin Login</a></div>
             <div class="row">
               <pre id="result"></pre>
               <div class="form-group col-md-12">
